# quant-autoresearch

./: .gitignore  HONEST_AUDIT.md  README.md  SESSION_FINAL_SUMMARY.md  WANG_INVESTIGATION.md  hypotheses.json  knowledge.json  program.md  pyproject.toml  results.tsv  wang_qa.tex  wang_qa_questions.md
.playwright-mcp/: page-2026-06-04T10-04-04-702Z.yml  page-2026-06-04T10-04-32-117Z.yml
autoresearch/: CHAMPION_DECAY.md  DEPLOYMENT.md  HONEST_AUDIT.md  RESEARCH_REVIEW.md  RESEARCH_REVIEW_v3.md  axis_label_parallel_results.csv  axis_label_results.csv  decay_snapshot.json  knowledge.json  program.md  results.tsv  techniques.json
harness/: constants.py  orchestrator.py  qc_client.py
modules/: bar_builder.py  bar_ext.py  features.py  labeler.py  sizing_ext.py  trainer.py
qa_doc/: wang_qa.tex
qc/: api.py  auto_etf.py  deploy_all.py  deploy_optimal.py  run_focused_experiments.py  top_tier_pf.py
reports/: console.js  index.html  round_100.html  round_102.html  round_104.html  round_106.html  round_108.html  round_11.html  round_111.html  round_112.html  round_117.html  round_120.html  round_121.html  round_122.html  round_124.html  round_126.html  round_130.html  round_131.html  round_14.html  round_16.html  round_17.html  round_18.html  round_20.html  round_22.html  round_23.html  round_25.html  round_26.html  round_27.html  round_3.html  round_30.html  round_32.html  round_34.html  round_37.html  round_38b.html  round_4.html  round_41.html  round_42.html  round_44.html  round_48.html  round_49.html  (+35 more)
results/: decay_snapshot.json  etf_qc_confirmed_pre2009.csv  (+4 more)
(+408 files in other folders)
